--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,31 @@
 {
-    "name": ":vendor_slug/:package_slug",
+    "name": "oneplusone-solutions/cmwquery",
     "description": ":package_description",
     "keywords": [
         ":vendor_name",
         "laravel",
         ":package_slug"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/oneplusone-solutions/cmwquery",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "OnePlusOne Solutions",
+            "email": "info@oneplusone.solutions",
+            "role": "Company"
+        },
+        {
+            "name": "Galina Bublik",
+            "email": "galina.bublik@oneplusone.solutions",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.0|^8.1",
+        "filament/filament": "^2.13",
         "spatie/laravel-package-tools": "^1.14.0",
+        "leandrocfe/filament-apex-charts": "^1.0",
+        "flowframe/laravel-trend": "^0.1.5",
         "illuminate/contracts": "^10.0"
     },
     "require-dev": {
@@ -35,13 +43,12 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "OnePlusOne\\CMWQuery\\": "src/",
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/"
+            "OnePlusOne\\CMWQuery\\Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -61,10 +68,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "OnePlusOne\\CMWQuery\\CMWServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "CMWQuery": "OnePlusOne\\CMWQuery\\CMWServiceProvider"
             }
         }
     },
