tried return replicate structure from sceleton

--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
                 "OnePlusOne\\CMWQuery\\CMWServiceProvider"
             ],
             "aliases": {
-                "CMWQuery": "OnePlusOne\\CMWQuery\\CMWServiceProvider"
+                "CMWQuery": "OnePlusOne\\CMWQuery\\CMWQuery"
             }
         }
     },
