--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,6 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "dev-main",
     "prefer-stable": true
 }
