--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require": {
         "php": "^8.0|^8.1",
         "filament/filament": "^2.13",
+        "filament/notifications":"^2.0",
         "spatie/laravel-package-tools": "^1.12.0",
         "leandrocfe/filament-apex-charts": "^1.0",
         "flowframe/laravel-trend": "^0.1.5"
